--- a/Samples/HanaBEE_SDK_SimpleRadarSample/res/values/strings.xml
+++ b/Samples/HanaBEE_SDK_SimpleRadarSample/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">hanabeeSample</string>
+    <string name="app_name">hanabeeRadarSample</string>
     <string name="hello_hanabee">Hello HanaBEE!</string>
 
 </resources>
