--- a/Samples/HanaBEE_SDK_ServiceSample/res/values/strings.xml
+++ b/Samples/HanaBEE_SDK_ServiceSample/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="app_name">hanabeeSample</string>
-    <string name="hello_hanabee">Hello Hanabee!</string>
+    <string name="hello_hanabee">Hello HanaBEE!</string>
 
 </resources>
